--- a/css/images.css
+++ b/css/images.css
@@ -61,7 +61,7 @@
 
 
 .buttons_main_min{
-    height: 720px;
+    height: 480px;
     width: 60px;
     font-size: 50px;
     background: rgb(172, 55, 8);
@@ -71,7 +71,7 @@
     height: 300px;
 }
 .buttons_main_average{
-    height: 900px;
+    height: 800px;
     width: 60px;
     font-size: 50px;
     background: rgb(172, 55, 8);
@@ -81,7 +81,7 @@
     height: 600px;
 }
 .buttons_main_max{
-    height: 1080px;
+    height: 1280;
     width: 60px;
     font-size: 50px;
     background: rgb(172, 55, 8);
