--- a/css/images.css
+++ b/css/images.css
@@ -81,7 +81,7 @@
     height: 600px;
 }
 .buttons_main_max{
-    height: 1280;
+    height: 1280px;
     width: 60px;
     font-size: 50px;
     background: rgb(172, 55, 8);
